--- a/BootStrap/bootstrapBasics.html
+++ b/BootStrap/bootstrapBasics.html
@@ -3,12 +3,77 @@
 <head>
 	<title>BootStrap Basics</title>
 	<link rel="stylesheet" type="text/css" href="bootstrap.css">
+	<style type="text/css">
+	.btn-danger{
+		background-color:orange;
+	}
+</style>
 </head>
 <body>
-	<h1>BootStrap Basics</h1>
-	<button class="btn btn-success btn-lg">CLICK ME</button>
+	<div class="container">
+		<div class="jumbotron">
+			<h1>This is a Jumbotron</h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<button class="btn btn-success btn-lg">Hi There</button>
+		</div>
+		<h1>BootStrap Basics</h1>
+	<button class="btn btn-success btn-lg">SUCCESS BUTTON</button>
+
+	<button class="btn btn-danger btn-lg">DANGER BUTTON</button>
+
+	<button class="btn btn-success btn-lg active">SUCESS BUTTON</button>
+
+	<button class="btn btn-success btn-lg" disabled="disabled">BUTTON DISABLED</button>
+
 
 	<a href="http:///www.getbootstrap.com" class="btn btn-info btn-lg">Bootstrap Docs</a>
+
+
+
+
+	<form>
+		<br>
+	  <div class="form-group">
+	    <label for="exampleInputEmail1">Email address</label>
+	    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+	    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+	  </div>
+	  <div class="form-group">
+	    <label for="exampleInputPassword1">Password</label>
+	    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+	  </div>
+	  <div class="form-group form-check">
+	    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+	    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+	  </div>
+	  <button type="submit" class="btn btn-primary">Submit</button>
+	</form>
+
+
+
+
+
+
+
+	<form class="form-inline">
+	<div class="form-group mb-2">
+	<label for="staticEmail2" class="sr-only">Email</label>
+	<input type="text" readonly class="form-control-plaintext" id="staticEmail2" value="email@example.com">
+	</div>
+	<div class="form-group mx-sm-3 mb-2">
+	<label for="inputPassword2" class="sr-only">Password</label>
+	<input type="password" class="form-control" id="inputPassword2" placeholder="Password">
+	</div>
+	<button type="submit" class="btn btn-primary mb-2">Confirm identity</button>
+	</form>
+
+
+	</div>
 
 </body>
 </html>
