--- a/BootStrap/bootstrapGridSystem.html
+++ b/BootStrap/bootstrapGridSystem.html
@@ -8,11 +8,31 @@
 		background:pink;
 		border: 1px solid purple;
 	}
+
+	.orange{
+		background:orange;
+		border:1px dashed red;
+		height: 50px;
+	}
 	</style>
 </head>
 <body>
 	<div class="container">
 		<div class="row">
+			<!--<div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+			<div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+			<div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+			<div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+			<div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+			<div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+			<div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+			<div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+			<div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+			<div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+			<div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+			<div class="col-lg-1 col-md-2 pink">COL LG 1</div>-->
+
+			<!--<div class="col-lg-1 pink">COL LG 1</div>
 			<div class="col-lg-1 pink">COL LG 1</div>
 			<div class="col-lg-1 pink">COL LG 1</div>
 			<div class="col-lg-1 pink">COL LG 1</div>
@@ -22,18 +42,28 @@
 			<div class="col-lg-1 pink">COL LG 1</div>
 			<div class="col-lg-1 pink">COL LG 1</div>
 			<div class="col-lg-1 pink">COL LG 1</div>
-			<div class="col-lg-1 pink">COL LG 1</div>
-			<div class="col-lg-1 pink">COL LG 1</div>
-			<div class="col-lg-1 pink">COL LG 1</div>
+			<div class="col-lg-1 pink">COL LG 1</div>-->
 
 			<!--<div class="col-lg-8 pink">COL LG 8</div>
 			<div class="col-lg-2 pink">COL LG 2</div>-->
 		</div>
 
 		<div class="row">
-			<div class="col-lg-4 pink">COL LG 4</div>
-			<div class="col-lg-4 pink">COL LG 4</div>
-			<div class="col-lg-4 pink">COL LG 4</div>			
+			<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 pink">
+				<div class="row">
+					<div class="col-lg-6 orange">FIRST HALF</div>
+					<div class="col-lg-6 orange">OTHER HALF</div>
+				</div>
+
+			</div>
+			<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 pink">COL LG 3</div>
+			<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 pink">COL LG 3</div>
+			<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 pink">
+				<div class="row">
+					<div class="col-md-2 orange">FIRST HALF</div>
+					<div class="col-md-2 orange">OTHER HALF</div>
+				</div>
+			</div>			
 		</div>
 	</div>
 
