--- a/StartupPage/startUpPage.html
+++ b/StartupPage/startUpPage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Start Up Page</title>
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="startUp.css">
@@ -42,7 +43,7 @@
 					<h1>To-Do Manager</h1>
 					<h3>Check for Items</h3>
 					<hr>
-					<button class="btn btn-default btn-lg"><i class="fas fa-list-ul"></i> Get Started</button>
+					<button class="btn btn-default btn-lg"><i class="fas fa-list-ul"></i> <a href="http://desamsettih.com">Get Started</a></button>
 				</div>
 			</div>
 		</div>
