--- a/Resume/index.html
+++ b/Resume/index.html
@@ -8,7 +8,8 @@
 </title>
 
 <!--
-  Newly Added 
+  Newly Added.
+  Change some stuff.
 -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="indexCSS.css">
@@ -100,7 +101,13 @@
       <br>
       <p class="subtexter">DESAMSETTI</p>
   </div>      
-  
+  <!--<div class="col-lg-4 col-md-3 col-sm-6 col-xs-12">
+    <div class="d-flex justify-content-center">
+      <div class="topright">
+        <img src="img/microsoftlogo.jpg" alt="" align="right">
+    </div>
+    </div>
+  </div>-->
 </div>
 </div>
 </div>
