--- a/BootStrap 4/GridSystem.html
+++ b/BootStrap 4/GridSystem.html
@@ -9,12 +9,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 <style>
-.container {
-  display: flex; /* or inline-flex */
-}
-.container {
-  flex-direction: row | row-reverse | column | column-reverse;
-}
+
 </style>
 </head>
 <body>
@@ -197,7 +192,7 @@
 
 
 
-
+<!--
 <div class="container">
 	<div class="row">
 		<div class="col-6 col-sm-3">.col-6 .col-sm-3</div>
@@ -224,6 +219,50 @@
     </div>
   </div>
 </div>
+
+
+-->
+
+
+
+
+
+
+
+<div class="container">
+	<h1 class="text-center display-4">The Grid</h1>
+	<div class="row border border-danger">
+		<h3 class="col-sm-6 col-xl-3 bg-info m-0">THING 1</h3>
+		<h3 class="col-sm-6 col-xl-9 bg-warning m-0">THING 2</h3>
+	</div>
+
+	<div class="row">
+		<div class="col bg-primary">THING</div>
+		<div class="col-6 bg-info">THING</div>
+		<div class="col bg-success">THING</div>
+	</div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
