--- a/ResumeProject/index.html
+++ b/ResumeProject/index.html
@@ -83,7 +83,7 @@ Try
                     <a class="nav-link" id="link" href="#gallery" style="color:white">Education</a>
                 </li>                            
                 <li class="nav-item">
-                    <a class="nav-link" id="link" href="#element_target" style="color:white">Resume</a>
+                    <a class="nav-link" id="link" href="Resume/Harshith Desamsetti Resume.pdf"  target="_blank" style="color:white">Resume</a>
                 </li>
 
                     
@@ -120,7 +120,8 @@ I am also a huge fan and follower of both Steve Jobs and Bill Gates. They are my
 
 		<a href="https://github.com/desamsetti" class="btn btn-success mb-4" target="_blank"><i class="fab fa-github-square"></i> View GitHub</a>
 
-		<a href="" class="btn btn-primary mb-4">View Resume</a>
+		<a href="Resume/Harshith Desamsetti Resume.pdf" class="btn btn-primary mb-4" target="_blank">View Resume</a>
+		
 		
 		<a href="mailto:dharshith1996@gmail.com" class="btn btn-success mb-4"><i class="fas fa-envelope-square"></i> Email Me</a>
 
@@ -185,6 +186,9 @@ I am also a huge fan and follower of both Steve Jobs and Bill Gates. They are my
 		<li class="list-inline-item">
         	<i class="devicon-heroku-original" style="font-size: 5rem"></i>
         </li>
+        <li class="list-inline-item">
+        	<i class="devicon-windows8-original" style="font-size: 5rem"></i>
+		</li>        	
 		</ul>
     </section>
 
@@ -324,7 +328,33 @@ I am also a huge fan and follower of both Steve Jobs and Bill Gates. They are my
 							</div>
 							<div class="card-footer text-muted">
     									Northern Illinois University, DeKalb, Illinois
-  							</div>  							
+  							</div>
+  							<div class="card-body">
+								<h5 class="card-title"><strong>Customer Relationship Manager System</strong></h5>
+								 <h6 class="card-subtitle mb-2 text-muted">Java, Spring MVC, Hibernate, AOP and CRUD operations, XML</h6>
+									<p class="card-text">
+										<strong>Project Description :</strong><br>
+										• Designing a Customer Relationship Management System using Spring MVC along with Hibernate CRUD features and AOP helped to practice the concepts intensively and opened the possibilities of applying the knowledge in newer projects.
+									</p>									
+										<a href="" class="btn btn-outline-success btn-sm">View</a>
+										<a href="" class="btn btn-outline-danger btn-sm"><i class="fab fa-java"></i></a>
+							</div>
+							<div class="card-footer text-muted">
+    									Northern Illinois University, DeKalb, Illinois
+  							</div>
+  							<div class="card-body">
+								<h5 class="card-title"><strong>Interactive Prototypes for Flight Parts Manufacturing Company</strong></h5>
+								 <h6 class="card-subtitle mb-2 text-muted">Agile Methodologies, MS Access, HTML, CSS, Bootstrap, PHP</h6>
+									<p class="card-text">
+										<strong>Project Description :</strong><br>
+										• Designing a Functioning System for Flight Parts Manufacturing Company by discovering and analysing the requirements and implement the required basic functions like adding parts, generating different types of reports and displaying to the users by using MS Access gave an idea about generic systems designing techniques used in the industry.
+									</p>									
+										<a href="" class="btn btn-outline-success btn-sm">View</a>
+										<a href="" class="btn btn-outline-danger btn-sm"><i class="fab fa-windows"></i></a>
+							</div>
+							<div class="card-footer text-muted">
+    									Northern Illinois University, DeKalb, Illinois
+  							</div>
 					</div>
 				</div>
 			</div>
@@ -391,9 +421,6 @@ Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richa
 </div>
 
 </div>
-
-
-
 -->
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
