--- a/ResumeProject/index.html
+++ b/ResumeProject/index.html
@@ -355,6 +355,19 @@ I am also a huge fan and follower of both Steve Jobs and Bill Gates. They are my
 							<div class="card-footer text-muted">
     									Northern Illinois University, DeKalb, Illinois
   							</div>
+  							<div class="card-body">
+								<h5 class="card-title"><strong>In Depth Analysis and Design of Hostel Management System</strong></h5>
+								 <h6 class="card-subtitle mb-2 text-muted">Agile Methodologies, PHP, MySQL, Javascript, HTML, CSS, Bootstrap, Python</h6>
+									<p class="card-text">
+										<strong>Project Description :</strong><br>
+										• Implementing a much-required Dorm management system specifically at that area and involving in the entire project life cycle which included requirements gathering and analysis, developing, debugging, testing and deploying it gave a hands-on practice opportunity at various aspects in Software Engineering like Waterfall and Agile methodologies.
+									</p>									
+										<a href="" class="btn btn-outline-success btn-sm">View</a>
+										<a href="" class="btn btn-outline-danger btn-sm"><i class="fas fa-code"></i></a>
+							</div>
+							<div class="card-footer text-muted">
+    									Northern Illinois University, DeKalb, Illinois
+  							</div>
 					</div>
 				</div>
 			</div>
