--- a/ResumeProject/index.html
+++ b/ResumeProject/index.html
@@ -83,7 +83,7 @@ Try
                     <a class="nav-link" id="link" href="#gallery" style="color:white">Education</a>
                 </li>                            
                 <li class="nav-item">
-                    <a class="nav-link" id="link" href="Resume/Harshith Desamsetti Resume.pdf"  target="_blank" style="color:white">Resume</a>
+                    <a class="nav-link" id="link" href="Resume/Harshith Desamsetti Resume.pdf" target="_blank" style="color:white">Resume</a>
                 </li>
 
                     
@@ -214,7 +214,7 @@ I am also a huge fan and follower of both Steve Jobs and Bill Gates. They are my
 									<p class="card-text">• Currently working as Teaching Assistant for CSCI 322/522 Android Mobile Device.Programming.Previous Teaching Assistant for CSCI 240 Introduction to C++. 
 										• Handled over 400 students regarding their doubts in their assignments, lectures and their projects.
 									</p>									
-										<a href="" class="btn btn-outline-success btn-sm">View</a>
+										<a href="http://www.jorjabrown.us/android/syllabus.html" class="btn btn-outline-success btn-sm">View</a>
 										<a href="" class="btn btn-outline-danger btn-sm"><i class="fas fa-code"></i></a>
 							</div>
 							<div class="card-footer text-muted">
@@ -229,8 +229,8 @@ I am also a huge fan and follower of both Steve Jobs and Bill Gates. They are my
 									•Implementing a much-required Dorm management system specifically at that area and involving in the entire project lifecycle which included requirements gathering and analysis, developing, debugging, testing and deploying it gave a handson practice opportunity at various aspects in Software Engineering like SDLC and Agile methodologies.
 
 									</p>									
-										<a href="" class="btn btn-outline-success btn-sm">View Certificate</a>
-										<a href="" class="btn btn-outline-danger btn-sm"><i class="fas fa-code"></i></a>
+										<a href="img/pajworldsoftwaresolutions.jpg" class="btn btn-outline-success btn-sm">View Certificate</a>
+										<a href="" class="btn btn-outline-danger btn-sm" target="_blank"><i class="fas fa-code"></i></a>
 							</div>
 							<div class="card-footer text-muted">
     									(July 2016 to November 2016)
@@ -323,8 +323,8 @@ I am also a huge fan and follower of both Steve Jobs and Bill Gates. They are my
 										<strong>Project Description :</strong><br>
 										• An Android application is specifically being designed for International students to solve the problem of finding roommates and in finding a temporary accommodation when needed.
 									</p>									
-										<a href="" class="btn btn-outline-success btn-sm">View</a>
-										<a href="" class="btn btn-outline-danger btn-sm"><i class="fab fa-android"></i></a>
+										<a href="https://github.com/desamsetti/Android-Applications" class="btn btn-outline-success btn-sm" target="_blank">View</a>
+										<a href="https://github.com/desamsetti/Android-Applications" class="btn btn-outline-danger btn-sm" target="_blank"><i class="fab fa-android"></i></a>
 							</div>
 							<div class="card-footer text-muted">
     									Northern Illinois University, DeKalb, Illinois
@@ -336,8 +336,8 @@ I am also a huge fan and follower of both Steve Jobs and Bill Gates. They are my
 										<strong>Project Description :</strong><br>
 										• Designing a Customer Relationship Management System using Spring MVC along with Hibernate CRUD features and AOP helped to practice the concepts intensively and opened the possibilities of applying the knowledge in newer projects.
 									</p>									
-										<a href="" class="btn btn-outline-success btn-sm">View</a>
-										<a href="" class="btn btn-outline-danger btn-sm"><i class="fab fa-java"></i></a>
+										<a href="https://github.com/desamsetti/SpringMVC" class="btn btn-outline-success btn-sm" target="_blank">View</a>
+										<a href="https://github.com/desamsetti/SpringMVC" class="btn btn-outline-danger btn-sm" target="_blank"><i class="fab fa-java"></i></a>
 							</div>
 							<div class="card-footer text-muted">
     									Northern Illinois University, DeKalb, Illinois
