--- a/ResumeProject/index.html
+++ b/ResumeProject/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Resume</title>
+<title>Harshith Desamsetti</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
@@ -16,6 +17,9 @@ Try
 <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 
 
+<!--<link rel="icon" href="http://www.domain.com/favicon.ico" type="image/x-icon" />
+
+<link rel="shortcut icon" href="http://www.domain.com/favicon.ico" type="image/x-icon" />-->
 
 
 
@@ -74,13 +78,13 @@ Try
                     <a class="nav-link" id="link" href="#skillsSection" style="color:white">Skills</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="link" href="#gallery" style="color:white">Work Experience</a>
+                    <a class="nav-link" id="link" href="#workexperienceDiv" style="color:white">Work Experience</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="link" href="#gallery" style="color:white">Projects</a>
+                    <a class="nav-link" id="link" href="#projectsDiv" style="color:white">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="link" href="#gallery" style="color:white">Education</a>
+                    <a class="nav-link" id="link" href="#educationDiv" style="color:white">Education</a>
                 </li>                            
                 <li class="nav-item">
                     <a class="nav-link" id="link" href="Resume/Harshith Desamsetti Resume.pdf" target="_blank" style="color:white">Resume</a>
@@ -110,7 +114,7 @@ Try
 	<!--JUMBOTRON-->
 	<section id="header" class="jumbotron text-center" style="margin: 0">		
 		<div id="content">
-			<h1 class="display-3" style="font-size: 8em"><b><strong>HARSHITH DESAMSETTI</strong></b></h1>		
+			<h3 class="" style="font-size: 3em"><b><strong>HARSHITH DESAMSETTI</strong></b></h3>
 		</div>
 		<p class="lead"><b><strong>I am a Masters Degree student in Computer Science at Northern Illinois University. I am currently working as Graduate Teaching Assistant for Introduction to C++ course.
 
@@ -127,7 +131,7 @@ I am also a huge fan and follower of both Steve Jobs and Bill Gates. They are my
 
 	</section>
 
-	<section id="skillsSection" class="ml-5 justify-content-md-center" align="center">
+	<section id="skillsSection" class="justify-content-md-center" align="center">
 	<div align="center">
     <h1 class="" align="center">Skills</h1>
     <div class="mb-3 newClass" align="center"><h5>Programming Languages &amp; Tools</h5></div>
@@ -204,7 +208,7 @@ I am also a huge fan and follower of both Steve Jobs and Bill Gates. They are my
 					<div class="card border-info mb-3">
 						<!--<img class="card-img-top" src="img/macbook1Image.jpg" alt="">-->
 						<img class="card-img-top" src="img/HarshithNewImage.jpg" alt="">
-						 <div class="card-header">
+						 <div class="card-header" id="workexperienceDiv">
     								<strong>WORK EXPERIENCE</strong>
   								</div>
 							<div class="card-body">
@@ -251,7 +255,7 @@ I am also a huge fan and follower of both Steve Jobs and Bill Gates. They are my
 					<div class="col-lg-4 mb-4">
 					<div class="card border-info mb-3">
 						<img class="card-img-top" src="img/proudNIUHuskie.png" alt="">
-						 <div class="card-header">
+						 <div class="card-header" id="educationDiv">
     								<strong>EDUCATION</strong>
   								</div>
 							<div class="card-body">
@@ -296,7 +300,7 @@ I am also a huge fan and follower of both Steve Jobs and Bill Gates. They are my
 				<div class="col-lg-4 mb-4">
 					<div class="card border-info mb-3">		
 						<img class="card-img-top" src="img/macbookImage.jpg" alt="">
-						 <div class="card-header">
+						 <div class="card-header" id="projectsDiv">
     								<strong>PROJECTS</strong>
   								</div>
 							<div class="card-body">
