--- a/MuseumOfCandy/index.html
+++ b/MuseumOfCandy/index.html
@@ -60,6 +60,72 @@ Try
 	</div>
 </section>
 
+
+
+
+
+
+
+<section class="container-fluid px-0">
+	<div class="row align-items-center content">
+		<div class="col-md-6 order-2 order-md-1">
+			<img src="imgs/milk.png" alt="" class="img-fluid">
+		</div>
+		<div class="col-md-6 text-center order-1 order-md-2">
+			<div class="row justify-content-center">
+				
+				<div class="col-10 col-lg-8 blurb">
+					<h2>MUSEUM OF CANDY</h2>
+					<img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
+					<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</div>				
+			</div>
+		</div>
+
+	</div>
+	<div class="row align-items-center content">
+		<div class="col-md-6 order-2 order-md-1">
+			<img src="imgs/milk.png" alt="" class="img-fluid">
+		</div>
+		<div class="col-md-6 text-center order-1 order-md-2">
+			<div class="row justify-content-center">
+				
+				<div class="col-10 col-lg-8 blurb">
+					<h2>MUSEUM OF CANDY</h2>
+					<img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
+					<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</div>				
+			</div>
+		</div>
+
+	</div>
+	
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
