Added While Loops

--- a/JavaScript/SimpleGuessingGame/game.html
+++ b/JavaScript/SimpleGuessingGame/game.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Simple Guessing Game</title>
-	<script type"text/javascript" src="game.js"></script>
+	<script type="text/javascript" src="game.js"></script>
 </head>
 <body>
 
