Added Color Toggler Program

--- a/JavaScript/Color Toggler/index.html
+++ b/JavaScript/Color Toggler/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Color Toggler</title>
-	<script type="text/javascript" src="script.js"></script>
+	<title>Color Toggler</title>	
+	<style>
+		.newOne{
+			width: 500px;
+			height: 250px;
+			align-content: center;			
+			display: block;
+  			margin: auto;
+  			margin-top:100px;
+		}
+	</style>
 </head>
 <body>
-	<button>CLICK ME</button>
-
+	<div align="center"><h1>Click to Toggle Background Color</h1></div>
+	<button class="newOne">CLICK ME</button>
+	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
