--- a/JavaScript/Color Toggler/index.html
+++ b/JavaScript/Color Toggler/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 	<div align="center"><h1>Click to Toggle Background Color</h1></div>
-	<button class="newOne">CLICK ME</button>
+	<button class="newOne"><h1>CLICK ME</h1></button>
 	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
