--- a/JQuery/ToDoList Project/index.html
+++ b/JQuery/ToDoList Project/index.html
@@ -13,13 +13,14 @@
 
 		<!--<h1>To-do List<i class="fa fa-plus" aria-hidden="true"></i></h1>-->
 		<h1>To-Do List<i class="fa fa-plus"></i></h1>		
-		<input type="text" placeholder="Add New Todo                       - Hit Enter">		
+		<input type="text" placeholder="Add New Todo                       - Hit Enter">
 		<ul>
-			<li><span><i class="fa fa-trash"></i></span> Go To Potions Class</li>
-			<li><span><i class="fa fa-trash"></i></span> Buy New Robes</li>
-			<li><span><i class="fa fa-trash"></i></span> Visit Hagrid</li>
+			<li><span><i class="fa fa-trash"></i></span> Complete Machine Learning</li>
+			<li><span><i class="fa fa-trash"></i></span> Complete Python Course</li>
+			<li><span><i class="fa fa-trash"></i></span> Complete Java assignments</li>
 		</ul>
 	</div>
+
 	<script type="text/javascript" src="assets/js/todos.js"></script>	
 </body>
 </html>
