Updated the JavaScript jQuery Programs

--- a/JQuery/ToDoList Project/index.html
+++ b/JQuery/ToDoList Project/index.html
@@ -18,6 +18,7 @@
 			<li><span><i class="fa fa-trash"></i></span> Complete Machine Learning</li>
 			<li><span><i class="fa fa-trash"></i></span> Complete Python Course</li>
 			<li><span><i class="fa fa-trash"></i></span> Complete Java assignments</li>
+			<li><span><i class="fa fa-trash"></i></span> Random Joke</li>
 		</ul>
 	</div>
 
